# cpp_dev_skeleton

./: .travis.yml  CMakeLists.txt  README.md  build_ut.sh
cmake/: CodeCoverage.cmake  GTest.cmake  UnitTest.cmake
src/: order.cpp
test/: CMakeLists.txt  test_order.cpp
test/local_warehouse/: CMakeLists.txt  test_local_warehouse.cpp
test/order/: CMakeLists.txt  test_order.cpp
